# alma_time

./: .gitignore  LICENSE  README.md  __init__.py  alma_time.py  pyproject.toml
alma_time/time_config-C11/: C-1.txt  C-10.txt  C-2.txt  C-4.txt  C-5.txt  C-8.txt
alma_time/time_config-C12/: C-2.txt  C-7.txt  C-8.txt
alma_time/time_config-C13/: C3.txt  C5.txt  C6.txt  C7.txt  C8.txt
time_config-C11/: ACA.txt  C-3.txt  C-6.txt  C-7.txt  C-9.txt
time_config-C12/: C-1.txt  C-3.txt  C-4.txt  C-5.txt  C-6.txt
time_config-C13/: ACA.txt  C1.txt  C10.txt  C2.txt  C4.txt  C9.txt
